# Klippa-Challenge

./: .dockerignore  .gitignore  README.md  config.json  docker-compose.yaml  pyproject.toml  requirements.txt
klippa/: __init__.py  api.py  cli.py
