[tool.poetry]
name = "klippa"
version = "0.1.0"
description = ""
authors = ["Csoldo <nagyboldi2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer-cli = "^0.0.13"
rich = "^13.6.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
